--- a/index.html
+++ b/index.html
@@ -163,13 +163,14 @@
               Zhichao Liao,</span>
             <span class="author-block">
               Xiansong Lai,</span>
-
-
-            <span class="author-block">
-              Xinghui Li<sup>✉</sup></span>
-            <span class="author-block">
-              <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup> 
-            </span>
+          </div>
+          
+          <div class="is-size-5 publication-authors"></div>
+          <span class="author-block">
+            Xinghui Li,<sup>✉</sup></span>
+          <span class="author-block">
+            <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup> 
+          </span>
           </div>
 
           <div class="is-size-5 publication-authors">
@@ -410,7 +411,7 @@
         <div class="publication-video">
           <video id="teaser" autoplay muted loop playsinline height="100%">
             <!-- <source src="./static/videos/ReconstructionComparisons_720p.mp4" type="video/mp4"> -->
-            <source src="./static/videos/reconstruction_comparisons/0085.mp4" type="video/mp4">
+            <source src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
           </video>
         </div>
       </div>
