--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
               Xiansong Lai,</span>
           </div>
           
-          <div class="is-size-5 publication-authors"></div>
+          <div class="is-size-5 publication-authors">
           <span class="author-block">
             Xinghui Li,<sup>✉</sup></span>
           <span class="author-block">
@@ -251,9 +251,9 @@
     <video class="video active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/all-0050.mp4" type="video/mp4">
     </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
+    <!-- <video class="video" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/all-0085.mp4" type="video/mp4">
-    </video>
+    </video> -->
     <video class="video" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/all-0580.mp4" type="video/mp4">
     </video>
@@ -283,7 +283,7 @@
   <span class="dot" onclick="switchVideo(2)"></span>
   <span class="dot" onclick="switchVideo(3)"></span>
   <span class="dot" onclick="switchVideo(4)"></span>
-  <span class="dot" onclick="switchVideo(5)"></span>
+  <!-- <span class="dot" onclick="switchVideo(5)"></span> -->
   <!-- <span class="dot" onclick="switchVideo(6)"></span> -->
   <!-- 添加更多导航点 -->
 </div>
