--- a/index.html
+++ b/index.html
@@ -133,12 +133,11 @@
               Zhichao Liao,</span>
             <span class="author-block">
               Xiansong Lai,</span>
+            <span class="author-block">
+              Xinghui Li,<sup>✉</sup></span>
+            <span class="author-block">
+              <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup></span>
           </div>
-          <span class="author-block">
-            Xinghui Li,<sup>✉</sup></span>
-          <span class="author-block">
-            <a href="https://www.sigs.tsinghua.edu.cn/cl/main.htm">Long Zeng</a><sup>✉</sup> 
-          </span>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block">Tsinghua University</span>
@@ -305,7 +304,7 @@
 
 <div class="columns is-centered has-text-centered">
   <h2 class="title is-3">Reconstruction Comparisons</h2>
-  
+
   <div class="video-container">
     <!-- 第一个视频 -->
     <video class="video active" autoplay controls muted loop playsinline height="100%">
@@ -456,7 +455,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{xxx,
   author    = {xxx},
-  title     = {GaussianRoom},
+  title     = {2DGS-Room},
   journal   = {xxxx},
   year      = {2024},
 }</code></pre>
@@ -503,9 +502,9 @@
          href="https://arxiv.org/pdf/2405.19671">
         <i class="fas fa-file-pdf"></i>
       </a>
-      <a class="icon-link" href="https://github.com/xhd0612/GaussianRoom" class="external-link" disabled>
+      <!-- <a class="icon-link" href="https://github.com/xhd0612/GaussianRoom" class="external-link" disabled>
         <i class="fab fa-github"></i>
-      </a>
+      </a> -->
     </div>
 
     <div class="columns is-centered">
