--- a/index.html
+++ b/index.html
@@ -259,9 +259,8 @@
 
 
 
+<h2 class="title is-3">Reconstruction Results</h2>
 <div class="columns is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Results</h2>
-
   <div class="video-container">
     <video class="video active" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
@@ -302,9 +301,8 @@
 
 
 
+<h2 class="title is-3">Reconstruction Comparisons</h2>
 <div class="columns is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Comparisons</h2>
-
   <div class="video-container">
     <!-- 第一个视频 -->
     <video class="video active" autoplay controls muted loop playsinline height="100%">
@@ -325,9 +323,6 @@
     <video class="video" autoplay controls muted loop playsinline height="100%">
       <source src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
     </video>
-    <!-- 在此添加更多视频 -->
-
-
   </div>
 </div>
 
@@ -338,8 +333,7 @@
   <span class="dot" onclick="switchVideo(2)"></span>
   <span class="dot" onclick="switchVideo(3)"></span>
   <span class="dot" onclick="switchVideo(4)"></span>
-  <!-- <span class="dot" onclick="switchVideo(5)"></span> -->
-  <!-- <span class="dot" onclick="switchVideo(6)"></span> -->
+  <span class="dot" onclick="switchVideo(5)"></span>
   <!-- 添加更多导航点 -->
 </div>
 
