--- a/index.html
+++ b/index.html
@@ -258,36 +258,38 @@
 
 
 
+<section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Reconstruction Results</h2>
+  <div class="columns is-centered has-text-centered">
+    <div class="video-container">
+      <video class="video active" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
+      </video>
 
-<h2 class="title is-3">Reconstruction Results</h2>
-<div class="columns is-centered has-text-centered">
-  <div class="video-container">
-    <video class="video active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
-    </video>
-
-    <!-- 控制按钮 -->
-    <div class="controls">
-      <button class="control-button prev" onclick="prevVideo()">❮</button>
-      <button class="control-button next" onclick="nextVideo()">❯</button>
+      <!-- 控制按钮 -->
+      <div class="controls">
+        <button class="control-button prev" onclick="prevVideo()">❮</button>
+        <button class="control-button next" onclick="nextVideo()">❯</button>
+      </div>
     </div>
   </div>
-</div>
+</section>
+
 
 <!-- 导航点 -->
 <div class="nav-dots">
@@ -300,31 +302,38 @@
 </div>
 
 
+<section class="hero is-light is-small is-centered has-text-centered">
+  <h2 class="title is-3">Reconstruction Comparisons</h2>
+  <div class="columns is-centered has-text-centered">
+    <div class="video-container">
+      <!-- 第一个视频 -->
+      <video class="video active" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-0050.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-0580.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-0616.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-8b.mp4" type="video/mp4">
+      </video>
+      <video class="video" autoplay controls muted loop playsinline height="100%">
+        <source src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
+      </video>
 
-<h2 class="title is-3">Reconstruction Comparisons</h2>
-<div class="columns is-centered has-text-centered">
-  <div class="video-container">
-    <!-- 第一个视频 -->
-    <video class="video active" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-0050.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-0580.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-0616.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-8b.mp4" type="video/mp4">
-    </video>
-    <video class="video" autoplay controls muted loop playsinline height="100%">
-      <source src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
-    </video>
+      <!-- 控制按钮 -->
+      <div class="controls">
+        <button class="control-button prev" onclick="prevVideo()">❮</button>
+        <button class="control-button next" onclick="nextVideo()">❯</button>
+      </div>
+    </div>
   </div>
-</div>
+</section>
 
 <!-- 导航点 -->
 <div class="nav-dots">
