--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
   <h2 class="title is-3">Reconstruction Results</h2>
   <div class="hero-body">
     <div class="container">
-      <div id="reconstruction-carousel" class="carousel carousel-animate">
+      <div id="results-carousel" class="carousel results-carousel">
         <!-- 视频项 -->
         <div class="carousel-item">
           <video class="video" autoplay controls muted loop playsinline height="100%">
@@ -301,7 +301,7 @@
   <h2 class="title is-3">Reconstruction Comparisons</h2>
   <div class="hero-body">
     <div class="container">
-      <div id="comparisons-carousel" class="carousel carousel-animate">
+      <div id="results-carousel" class="carousel results-carousel">
         <!-- 视频项 -->
         <div class="carousel-item">
           <video class="video" autoplay controls muted loop playsinline height="100%">
