--- a/index.html
+++ b/index.html
@@ -261,35 +261,40 @@
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
-        <!-- 视频项 -->
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-0050.mp4" type="video/mp4">
+        <div class="item item-gs-0050">
+          <video poster="" id="gs-0050" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-0050.mp4"
+                    type="video/mp4">
           </video>
         </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-0085.mp4" type="video/mp4">
+        <div class="item item-gs-0085">
+          <video poster="" id="gs-0085" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-0085.mp4"
+                    type="video/mp4">
           </video>
         </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-0580.mp4" type="video/mp4">
+        <div class="item item-gs-0580">
+          <video poster="" id="gs-0580" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-0580.mp4"
+                    type="video/mp4">
           </video>
         </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-0616.mp4" type="video/mp4">
+        <div class="item item-gs-0616">
+          <video poster="" id="gs-0616" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-0616.mp4"
+                    type="video/mp4">
           </video>
         </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-8b.mp4" type="video/mp4">
+        <div class="item item-gs-8b">
+          <video poster="" id="gs-8b" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-8b.mp4"
+                    type="video/mp4">
           </video>
         </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_results/gs-8d.mp4" type="video/mp4">
+        <div class="item item-gs-8d">
+          <video poster="" id="gs-8d" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/gs-8d.mp4"
+                    type="video/mp4">
           </video>
         </div>
       </div>
