--- a/index.html
+++ b/index.html
@@ -256,44 +256,87 @@
 </section>
 
 
-<section class="hero is-light is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Results</h2>
+<section class="hero is-light is-small">
   <div class="hero-body">
     <div class="container">
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-gs-0050">
           <video poster="" id="gs-0050" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-0050.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-0050.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0085">
           <video poster="" id="gs-0085" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-0085.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-0085.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0580">
           <video poster="" id="gs-0580" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-0580.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-0580.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-0616">
           <video poster="" id="gs-0616" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-0616.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-0616.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-8b">
           <video poster="" id="gs-8b" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-8b.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-8b.mp4"
                     type="video/mp4">
           </video>
         </div>
         <div class="item item-gs-8d">
           <video poster="" id="gs-8d" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/gs-8d.mp4"
+            <source src="./static/videos/reconstruction_resultsgs-8d.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="hero is-light is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+        <div class="item item-all-0050">
+          <video poster="" id="all-0050" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-0050.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-all-0085">
+          <video poster="" id="all-0085" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-0085.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-all-0580">
+          <video poster="" id="all-0580" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-0580.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-all-0616">
+          <video poster="" id="all-0616" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-0616.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-all-8b">
+          <video poster="" id="all-8b" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-8b.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+        <div class="item item-all-8d">
+          <video poster="" id="all-8d" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/reconstruction_comparisonsall-8d.mp4"
                     type="video/mp4">
           </video>
         </div>
@@ -302,46 +345,6 @@
   </div>
 </section>
 
-<section class="hero is-light is-small is-centered has-text-centered">
-  <h2 class="title is-3">Reconstruction Comparisons</h2>
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <!-- 视频项 -->
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-0050.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-0085.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-0580.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-0616.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-8b.mp4" type="video/mp4">
-          </video>
-        </div>
-        <div class="carousel-item">
-          <video class="video" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/reconstruction_comparisons/all-8d.mp4" type="video/mp4">
-          </video>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
 <!-- <script>
   let currentIndexReconstruction = 0;
